# resty-desktop

./: .gitignore  CLAUDE.md  LICENSE  README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.claude/: settings.json
.claude/commands/: commit.md  tag.md
.claude/plans/: a-previous-audit-found-atomic-zephyr.md  can-we-do-anything-quirky-lamport.md  i-believe-adding-a-linked-lovelace.md  i-d-like-to-add-abstract-quill.md  i-need-an-opinion-fuzzy-locket.md  i-need-to-plan-wiggly-newell.md  i-received-a-request-robust-nygaard.md  i-want-to-focus-fuzzy-lobster.md  in-v0-2-0-to-v0-2-1-delegated-dove.md  polymorphic-drifting-pascal.md  the-project-is-in-deep-honey.md
.github/workflows/: release.yml  test.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: cache_warmer.rs  lib.rs  main.rs  scheduler.rs  tasks.rs
src-tauri/src/commands/: auth.rs  backup_plan.rs  browse.rs  cache.rs  crypto.rs  mod.rs  repo.rs  repo_locks.rs  schedule.rs  snapshot.rs  transfer.rs
src-tauri/tests/fixtures/: backrest_config.json
src/components/: ActivityPanel.tsx  Button.tsx  ContextMenu.tsx  EmptyState.tsx  ImportExportCard.tsx  Input.tsx  Modal.tsx  ProgressBar.tsx  Sidebar.tsx  Spinner.tsx
src/lib/: activity.test.ts  activity.tsx  config.ts  format.test.ts  format.ts  invoke.ts  theme.tsx  types.test.ts  types.ts  utils.test.ts  utils.ts
src/pages/: AuthPage.tsx  BackupPage.tsx  BackupPlanEditPage.tsx  BackupPlansPage.tsx  BrowsePage.tsx  DiffPage.tsx  LogsPage.tsx  RepoSearchPage.tsx  RepositoriesPage.tsx  ScheduleEditPage.tsx  SchedulesPage.tsx  SearchPage.tsx  SettingsPage.tsx  SnapshotsPage.tsx
src/store/: appStore.ts
