[package]
name = "restic-gui"
version = "0.1.0"
description = "A cross-platform GUI client for the Restic backup tool"
authors = ["you"]
edition = "2021"

[lib]
name = "restic_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
rusqlite = { version = "0.31", features = ["bundled"] }
