[package]
name = "resty-desktop"
version = "0.0.0"
description = "A cross-platform GUI client for the Restic backup tool"
homepage = "https://www.github.com/nraboy/resty-desktop"
repository = "https://www.github.com/nraboy/resty-desktop"
authors = ["Nic Raboy <https://www.nraboy.com>"]
license = "MIT"
edition = "2021"

[lib]
name = "restic_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
rusqlite = { version = "0.31", features = ["bundled"] }
argon2 = "0.5"
aes-gcm = "0.10"
rand = "0.8"
zeroize = { version = "1", features = ["derive"] }
cron = "0.12"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
tokio = { version = "1", features = ["time"] }
image = { version = "0.25", default-features = false, features = ["png"] }
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
